[gd_scene load_steps=11 format=4 uid="uid://c5ay1yrxdfkc4"]

[ext_resource type="Script" uid="uid://jmi8pjnplsou" path="res://Scripts/main.gd" id="1_7i1ub"]
[ext_resource type="Texture2D" uid="uid://c1uof8irv5ugt" path="res://Art Assets/Levels/Map/map.png" id="1_yjsus"]
[ext_resource type="PackedScene" uid="uid://ceh3q4kf7mmcc" path="res://Scenes/Levels/sea.tscn" id="2_nk5xi"]
[ext_resource type="PackedScene" uid="uid://dmgkp5t66nv7r" path="res://Scenes/Characters/player.tscn" id="2_u872a"]
[ext_resource type="Texture2D" uid="uid://dyjm7x7ftp4uw" path="res://Art Assets/Levels/Map/beach.png" id="4_nk5xi"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nk5xi"]
texture = ExtResource("1_yjsus")
texture_region_size = Vector2i(24, 24)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(12, -12, -12, -12, -12, -9, 12, -9)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0

[sub_resource type="TileSet" id="TileSet_7i1ub"]
tile_size = Vector2i(24, 24)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_nk5xi")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7i1ub"]
texture = ExtResource("4_nk5xi")
texture_region_size = Vector2i(24, 24)
0:3/size_in_atlas = Vector2i(7, 4)
0:3/0 = 0
0:3/0/texture_origin = Vector2i(0, 5)
0:7/size_in_atlas = Vector2i(4, 3)
0:7/0 = 0
0:7/0/texture_origin = Vector2i(0, -5)
5:7/size_in_atlas = Vector2i(3, 3)
5:7/0 = 0
0:0/size_in_atlas = Vector2i(7, 3)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(-5, -5)

[sub_resource type="TileSet" id="TileSet_w0lsm"]
tile_size = Vector2i(24, 24)
sources/1 = SubResource("TileSetAtlasSource_7i1ub")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w0lsm"]
size = Vector2(51, 35)

[node name="Main" type="Node2D"]
script = ExtResource("1_7i1ub")

[node name="map" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD2/xIAAAAAAAAAAAD2/xMAAAAAAAAAAAD2/xQAAAAAAAAAAAD2/xUAAAAAAAAAAAD2/xYAAAAAAAAAAAD2/xcAAAAAAAAAAAD3/xIAAAAAAAAAAAD3/xMAAAAAAAAAAAD3/xQAAAAAAAAAAAD3/xUAAAABAAAAAAD3/xYAAAABAAAAAAD3/xcAAAAAAAAAAAD4/xIAAAABAAAAAAD4/xMAAAAAAAAAAAD4/xQAAAAAAAAAAAD4/xUAAAABAAAAAAD4/xYAAAABAAAAAAD4/xcAAAAAAAAAAAD5/xIAAAAAAAAAAAD5/xMAAAAAAAAAAAD5/xQAAAAAAAAAAAD5/xUAAAAAAAAAAAD5/xYAAAAAAAAAAAD5/xcAAAAAAAAAAAD6/xIAAAAAAAAAAAD6/xMAAAAAAAAAAAD6/xQAAAAAAAAAAAD6/xUAAAAAAAAAAAD6/xYAAAAAAAAAAAD6/xcAAAAAAAAAAAD7/xIAAAAAAAAAAAD7/xMAAAAAAAAAAAD7/xQAAAAAAAAAAAD7/xUAAAAAAAAAAAD7/xYAAAAAAAAAAAD7/xcAAAAAAAAAAAD8/xIAAAAAAAAAAAD8/xMAAAABAAAAAAD8/xQAAAAAAAAAAAD8/xUAAAAAAAAAAAD8/xYAAAAAAAAAAAD8/xcAAAAAAAAAAAD9/xIAAAAAAAAAAAD9/xMAAAABAAAAAAD9/xQAAAAAAAAAAAD9/xUAAAAAAAAAAAD9/xYAAAAAAAAAAAD9/xcAAAAAAAAAAAD+/xIAAAAAAAAAAAD+/xMAAAABAAAAAAD+/xQAAAAAAAAAAAD+/xUAAAAAAAAAAAD+/xYAAAAAAAAAAAD+/xcAAAAAAAAAAAD//xIAAAAAAAAAAAD//xMAAAAAAAAAAAD//xQAAAAAAAAAAAD//xUAAAABAAAAAAD//xYAAAABAAAAAAD//xcAAAAAAAAAAAAAABIAAAAAAAAAAAAAABMAAAAAAAAAAAAAABQAAAAAAAAAAAAAABUAAAABAAAAAAAAABYAAAABAAAAAAAAABcAAAAAAAAAAAABABIAAAAAAAAAAAABABMAAAAAAAAAAAABABQAAAAAAAAAAAABABUAAAAAAAAAAAABABYAAAAAAAAAAAABABcAAAAAAAAAAAACABIAAAAAAAAAAAACABMAAAAAAAAAAAACABQAAAAAAAAAAAACABUAAAABAAAAAAACABYAAAAAAAAAAAACABcAAAAAAAAAAAADABIAAAAAAAAAAAADABMAAAAAAAAAAAADABQAAAAAAAAAAAADABUAAAAAAAAAAAADABYAAAAAAAAAAAADABcAAAAAAAAAAAAEABIAAAAAAAAAAAAEABMAAAAAAAAAAAAEABQAAAAAAAAAAAAEABUAAAAAAAAAAAAEABYAAAAAAAAAAAAEABcAAAAAAAAAAAAFABIAAAAAAAAAAAAFABMAAAAAAAAAAAAFABQAAAAAAAAAAAAFABUAAAAAAAAAAAAFABYAAAAAAAAAAAAFABcAAAAAAAAAAAAGABIAAAAAAAAAAAAGABMAAAAAAAAAAAAGABQAAAAAAAAAAAAGABUAAAAAAAAAAAAGABYAAAAAAAAAAAAGABcAAAAAAAAAAAAHABIAAAAAAAAAAAAHABMAAAAAAAAAAAAHABQAAAAAAAAAAAAHABUAAAAAAAAAAAAHABYAAAAAAAAAAAAHABcAAAAAAAAAAAAIABIAAAAAAAAAAAAIABMAAAAAAAAAAAAIABQAAAABAAAAAAAIABUAAAABAAAAAAAIABYAAAAAAAAAAAAIABcAAAAAAAAAAAAJABIAAAAAAAAAAAAJABMAAAAAAAAAAAAJABQAAAABAAAAAAAJABUAAAABAAAAAAAJABYAAAAAAAAAAAAJABcAAAABAAAAAAAKABIAAAAAAAAAAAAKABMAAAAAAAAAAAAKABQAAAABAAAAAAAKABUAAAABAAAAAAAKABYAAAAAAAAAAAAKABcAAAAAAAAAAAALABIAAAAAAAAAAAALABMAAAAAAAAAAAALABQAAAABAAAAAAALABUAAAABAAAAAAALABYAAAAAAAAAAAALABcAAAAAAAAAAAD2/xEAAAACAAAAAAD3/xEAAAACAAAAAAD4/xEAAAACAAAAAAD5/xEAAAACAAAAAAD6/xEAAAACAAAAAAD7/xEAAAACAAAAAAD8/xEAAAACAAAAAAD9/xEAAAACAAAAAAD+/xEAAAACAAAAAAD//xEAAAACAAAAAAAAABEAAAACAAAAAAABABEAAAACAAAAAAACABEAAAACAAAAAAADABEAAAACAAAAAAAEABEAAAACAAAAAAAFABEAAAACAAAAAAAGABEAAAACAAAAAAAHABEAAAACAAAAAAAIABEAAAACAAAAAAAJABEAAAACAAAAAAAKABEAAAACAAAAAAALABEAAAACAAAAAAD2/xgAAAACAAEAAAD3/xgAAAACAAEAAAD4/xgAAAACAAEAAAD5/xgAAAACAAEAAAD6/xgAAAACAAEAAAD7/xgAAAACAAEAAAD8/xgAAAACAAEAAAD9/xgAAAACAAEAAAD+/xgAAAACAAEAAAD//xgAAAACAAEAAAAAABgAAAACAAEAAAABABgAAAACAAEAAAACABgAAAACAAEAAAADABgAAAACAAEAAAAEABgAAAACAAEAAAAFABgAAAACAAEAAAAGABgAAAACAAEAAAAHABgAAAACAAEAAAAIABgAAAACAAEAAAAJABgAAAACAAEAAAAKABgAAAACAAEAAAALABgAAAACAAEAAAD2/wwAAAAEAAAAAAD2/w0AAAAEAAAAAAD2/w4AAAAEAAEAAAD2/w8AAAADAAAAAAD3/wwAAAAAAAEAAAD3/w0AAAAEAAAAAAD3/w4AAAAEAAEAAAD3/w8AAAADAAAAAAD4/wwAAAAEAAAAAAD4/w0AAAAEAAAAAAD4/w4AAAAEAAEAAAD4/w8AAAADAAAAAAD5/wwAAAAEAAAAAAD5/w0AAAAEAAAAAAD5/w4AAAAEAAEAAAD5/w8AAAADAAAAAAD6/wwAAAAEAAAAAAD6/w0AAAAEAAAAAAD6/w4AAAAEAAEAAAD6/w8AAAADAAAAAAD7/wwAAAAEAAAAAAD7/w0AAAAEAAAAAAD7/w4AAAAEAAEAAAD7/w8AAAADAAAAAAD8/wwAAAAEAAAAAAD8/w0AAAAEAAAAAAD8/w4AAAAEAAEAAAD8/w8AAAADAAAAAAD9/wwAAAAEAAAAAAD9/w0AAAAEAAAAAAD9/w4AAAAEAAEAAAD9/w8AAAADAAAAAAD+/wwAAAAEAAAAAAD+/w0AAAAEAAAAAAD+/w4AAAAEAAEAAAD+/w8AAAADAAAAAAD//wwAAAAEAAAAAAD//w0AAAAEAAAAAAD//w4AAAAEAAEAAAD//w8AAAADAAAAAAAAAAwAAAAEAAAAAAAAAA0AAAAEAAAAAAAAAA4AAAAEAAEAAAAAAA8AAAADAAAAAAABAAwAAAAEAAAAAAABAA0AAAAEAAAAAAABAA4AAAAEAAEAAAABAA8AAAADAAAAAAACAAwAAAAEAAAAAAACAA0AAAAEAAAAAAACAA4AAAAEAAEAAAACAA8AAAADAAAAAAADAAwAAAAEAAAAAAADAA0AAAAEAAAAAAADAA4AAAAEAAEAAAADAA8AAAADAAAAAAAEAAwAAAAEAAAAAAAEAA0AAAAEAAAAAAAEAA4AAAAEAAEAAAAEAA8AAAADAAAAAAAFAAwAAAAEAAAAAAAFAA0AAAAEAAAAAAAFAA4AAAAEAAEAAAAFAA8AAAADAAAAAAAGAAwAAAABAAEAAAAGAA0AAAAEAAAAAAAGAA4AAAAEAAEAAAAGAA8AAAADAAAAAAAHAAwAAAAEAAAAAAAHAA0AAAAEAAAAAAAHAA4AAAAEAAEAAAAHAA8AAAADAAAAAAAIAAwAAAAEAAAAAAAIAA0AAAAEAAAAAAAIAA4AAAAEAAEAAAAIAA8AAAADAAAAAAAJAAwAAAAEAAAAAAAJAA0AAAAEAAAAAAAJAA4AAAAEAAEAAAAJAA8AAAADAAAAAAAKAAwAAAAEAAAAAAAKAA0AAAABAAEAAAAKAA4AAAAEAAEAAAAKAA8AAAADAAAAAAALAAwAAAAAAAEAAAALAA0AAAAEAAAAAAALAA4AAAAEAAEAAAALAA8AAAADAAAAAAD2/wsAAAAEAAAAAAD3/wsAAAAEAAAAAAD4/wsAAAAEAAAAAAD5/wsAAAAEAAAAAAD6/wsAAAAEAAAAAAD7/wsAAAAEAAAAAAD8/wsAAAAAAAEAAAD9/wsAAAAAAAEAAAD+/wsAAAAEAAAAAAD//wsAAAAEAAAAAAAAAAsAAAAEAAAAAAABAAsAAAAEAAAAAAACAAsAAAAEAAAAAAADAAsAAAAEAAAAAAAEAAsAAAAEAAAAAAAFAAsAAAAEAAAAAAAGAAsAAAAEAAAAAAAHAAsAAAAEAAAAAAAIAAsAAAAEAAAAAAAJAAsAAAAEAAAAAAAKAAsAAAAEAAAAAAALAAsAAAAEAAAAAAALABAAAAADAAEAAAAKABAAAAADAAEAAAAJABAAAAADAAEAAAAIABAAAAADAAEAAAAHABAAAAADAAEAAAAGABAAAAADAAEAAAAFABAAAAADAAEAAAAEABAAAAADAAEAAAADABAAAAADAAEAAAACABAAAAADAAEAAAABABAAAAADAAEAAAAAABAAAAADAAEAAAD//xAAAAADAAEAAAD+/xAAAAADAAEAAAD9/xAAAAADAAEAAAD8/xAAAAADAAEAAAD7/xAAAAADAAEAAAD6/xAAAAADAAEAAAD5/xAAAAADAAEAAAD4/xAAAAADAAEAAAD3/xAAAAADAAEAAAD2/xAAAAADAAEAAAAMABkAAAAEAAAAAAAMABgAAAAEAAAAAAAMABcAAAAEAAAAAAAMABYAAAAEAAAAAAAMABUAAAAEAAAAAAAMABQAAAAEAAAAAAAMABMAAAAEAAAAAAAMABIAAAAEAAAAAAAMABEAAAAEAAAAAAAMABAAAAAEAAAAAAAMAA8AAAAEAAAAAAAMAA4AAAAEAAAAAAAMAA0AAAAEAAAAAAAMAAwAAAAEAAAAAAAMAAsAAAAEAAAAAAAMAAoAAAAEAAAAAAALAAoAAAAEAAAAAAAKAAoAAAAEAAAAAAAJAAoAAAAEAAAAAAAIAAoAAAAEAAAAAAAHAAoAAAAEAAAAAAAGAAoAAAAEAAAAAAAFAAoAAAAEAAAAAAAEAAoAAAAEAAAAAAADAAoAAAAEAAAAAAACAAoAAAAEAAAAAAABAAoAAAAEAAAAAAAAAAoAAAAEAAAAAAD//woAAAAEAAAAAAD+/woAAAAEAAAAAAD9/woAAAAEAAAAAAD8/woAAAAEAAAAAAD7/woAAAAEAAAAAAD6/woAAAAEAAAAAAD5/woAAAAEAAAAAAD4/woAAAAEAAAAAAD3/woAAAAEAAAAAAD2/woAAAAEAAAAAAD1/woAAAAEAAAAAAD1/wsAAAAEAAAAAAD1/wwAAAAEAAAAAAD1/w0AAAAEAAAAAAD1/w4AAAAEAAAAAAD1/w8AAAAEAAAAAAD1/xAAAAAEAAAAAAD1/xEAAAAEAAAAAAD1/xIAAAAEAAAAAAD1/xMAAAAEAAAAAAD1/xQAAAAEAAAAAAD1/xUAAAAEAAAAAAD1/xYAAAAEAAAAAAD1/xcAAAAEAAAAAAD1/xgAAAAEAAAAAAD1/xkAAAAEAAAAAAA=")
tile_set = SubResource("TileSet_7i1ub")

[node name="sea" parent="." instance=ExtResource("2_nk5xi")]
position = Vector2(28, 600)
scale = Vector2(5.7, 1)

[node name="Player" parent="." instance=ExtResource("2_u872a")]
position = Vector2(32, 454)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(2, 2)

[node name="Buidings" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAYAB4AAAAAAAEAAAABAA0AAQAAAAMAAAAJAA0AAQAAAAcAAAAJABQAAQAFAAcAAAD5/w0AAQAAAAAAAAA=")
tile_set = SubResource("TileSet_w0lsm")

[node name="EnterSteakhouseArea" type="Area2D" parent="."]
z_index = 5
position = Vector2(35, 372)

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnterSteakhouseArea"]
position = Vector2(0.5, 7.5)
shape = SubResource("RectangleShape2D_w0lsm")
debug_color = Color(0.950949, 0, 0.566082, 0.42)

[node name="EnterPoliceStation" type="Area2D" parent="."]
z_index = 5
position = Vector2(35, 372)

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnterPoliceStation"]
position = Vector2(215, 7)
shape = SubResource("RectangleShape2D_w0lsm")
debug_color = Color(0.950949, 0, 0.566082, 0.42)

[connection signal="body_entered" from="EnterSteakhouseArea" to="." method="_on_enter_steakhouse_area_body_entered"]
[connection signal="body_exited" from="EnterSteakhouseArea" to="." method="_on_enter_steakhouse_area_body_exited"]
[connection signal="body_entered" from="EnterPoliceStation" to="." method="_on_enter_police_station_body_entered"]
[connection signal="body_exited" from="EnterPoliceStation" to="." method="_on_enter_police_station_body_exited"]
